Update InputManager.java